--- a/Whoscall Layout/whoscallLayout-2.css
+++ b/Whoscall Layout/whoscallLayout-2.css
@@ -114,22 +114,24 @@ button{
 .section-KV .KV{
     width: 960px;
 }
-.section-KV .KV .main-Title{
-    align-items
-}
-.section-KV .KV .main-Title h2{
-    font-size: 42px;
+.section-KV .main-Title h2{
+    font-size: 60px;
+    font-weight: 900;
     line-height: 130px;
     color: #00c300;
+
 }
-.section-KV .KV p{
+.section-KV .main-Title p{
     font-size: 32px;
+    font-weight: 500;
 }
-.section-KV .KV a{
+.section-KV .main-Title a{
     display: block;
+    margin: 40px 0 10px;
     width: fit-content;
-    padding: 10px 20px;
-    font-size: 22px;
+    padding: 20px 70px;
+    font-size: 20px;
+    font-weight: 800;
     background-color: #00c300;
     color: #fff;
     text-decoration: none;
@@ -137,8 +139,9 @@ button{
 }
 .section-KV .KV .note{
     color: #00c300;
-    font-size: 18px;
-    /* line-height: normal; */
+    font-size: 14px;
+    font-weight:900;
+    padding: 0 20px;
 }
 .section-KV .pic:last-child{
     text-align: right;
@@ -156,10 +159,12 @@ button{
 .section-MarketingResearch .main-Title h2{
     font-size: 24px;
     font-weight: 700;
+    padding: 20px 0;
 }
 .section-MarketingResearch .main-Title p{
     font-size: 32px;
     font-weight: 700;
+    line-height: 50px;
 }
 .section-MarketingResearch .main-Title strong{
     color: #00c300;
@@ -167,6 +172,7 @@ button{
 .section-MarketingResearch .main-Title .mute{
     color: #717b8e;
     font-size: 14px;
+    padding: 20px 0;
 }
 .section-MarketingResearch .item-List .item{
     display: flex;
@@ -178,6 +184,7 @@ button{
 }
 .section-MarketingResearch .item-List .item .pic{
     width: 465px;
+    padding: 0 30px;
 }
 .section-MarketingResearch .item-List .item .txt{
     width: 465px;
@@ -186,15 +193,17 @@ button{
     font-size: 32px;
     color: #00c300;
     font-weight: 900;
-    word-spacing: 1px;
+    padding: 30px 0;
 }
 .section-MarketingResearch .item-List .txt p{
     font-size: 22px;
     font-weight: 900;
+    line-height: 30px;
 }
 .section-MarketingResearch .item-List .txt .mute{
     color: #717b8e;
     font-size: 14px;
+    padding: 30px 0;
 }
 
 /* ----------拓展業務---------- */
@@ -236,6 +245,7 @@ button{
     font-size: 32px;
     font-weight: 700;
     text-align: center;
+    padding: 60px 0;
 }
 .section-UserExprience .item-List{
     display: flex;
@@ -250,10 +260,16 @@ button{
     align-content: space-between;
     padding: 20px;
 }
+.section-UserExprience .item-List .item h3{
+    padding: 10px 0 30px;
+    font-size: 25px;
+    font-weight: 900;
+}
+.section-UserExprience .item-List .item p{
+    line-height: 20px;
+    font-weight: 600;
+}
 .section-UserExprience .UserExprience .txt img{
-    -moz-transform:scaleX(-1);
-    -webkit-transform:scaleX(-1);
-    -o-transform:scaleX(-1);
     transform:scaleX(-1);
     margin: 2px;
 }
@@ -268,10 +284,18 @@ button{
 /* ----------馬上申請---------- */
 .section-ApplyNow{
     background-color: #f5f6f9;
-    padding: 100px 0;
+    padding: 80px 0;
 }
 .section-ApplyNow .main-Title{
     text-align: center;
+}
+.section-ApplyNow .main-Title h2{
+    padding: 30px 0;
+    font-size: 40px;
+    font-weight: 900;
+}
+.section-ApplyNow .main-Title .note{
+    
 }
 
 /* ---------------------------------- */
