--- a/RWD Layout/RWDLayout.css
+++ b/RWD Layout/RWDLayout.css
@@ -12,6 +12,7 @@
 
 .item .pic {
     width: 50%;
+    margin-right: 10px;
 }
 
 .item .pic img {
@@ -19,8 +20,10 @@
 }
 
 .item .text {
-    padding: 10px;
     width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .item .text h2 {
@@ -45,8 +48,7 @@
 
     .item {
         display: flex;
-        justify-content: center;
-        align-content: center;
+        place-content: center center;
     }
 
     .item .pic {
